# Real-Time-Emotion-Reading

./: .gitignore  .pyproject.toml.swp  Detecting Facial Emotion From Images.ipynb  LICENSE  README.md  pyproject.toml
NBS/: detecting_facial_emotion_from_images.ipynb  detecting_facial_landmarks_from_images.ipynb  python_audio_example.ipynb  real_time_landmark_detection.ipynb  webcam.ipynb
NBS/emotion_detection/: emotion_game.ipynb
